--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,8 @@
     "express": "^4.21.1",
     "moment": "^2.30.1",
     "mysql": "^2.18.1",
+    "nodej": "^1.0.1",
+    "nodejs": "^0.0.0",
     "nodemon": "^3.1.7"
   }
 }
